# BangDream-Zero-Knowledge-Gacha

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  vercel-install.sh  vercel.json
circuits/: Cargo.toml
circuits/src/: lib.rs  main.rs  my_gacha_pity.rs  my_gacha_single.rs  my_gacha_ten.rs  my_gacha_ten_pity.rs  wasm.rs
circuits/tests/: test_ten_pity.rs
public/characters/: .gitkeep
scripts/: copy-wasm.js
src/lib/wasm/: gacha.js  gacha_bg.wasm  package.json  zk_gacha.d.ts  zk_gacha.js  zk_gacha_bg.wasm.d.ts
src/pages/: _app.tsx  index.tsx
src/pages/api/: draw.ts  drawPity.ts  drawTen.ts  drawTenPity.ts
src/styles/: globals.css
