[package]
name = "zk_gacha"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "zk_gacha"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
extend = "1.2.0"
# Disable halo2_proofs default features (including multicore) to avoid issues on wasm32 targets.
halo2_proofs = { version = "0.3.0", default-features = false }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"